# cube_simulator

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp
libs/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  animation.cpp  animation.h  camera_anim.h  game_object_anim.h
libs/Editor/examples/Axis/: Axis.cpp  Axis.h  main.cpp
libs/Editor/examples/SingleCube/: SingleCube.cpp  SingleCube.h
libs/Math/: CMakeLists.txt
libs/Math/Test/: matrix_test.cpp  prospective_projection_matrix_test.cpp  rotation_matrix_test.cpp  scale_matrix_test.cpp  translation_matrix_test.cpp  vector_test.cpp  view_matrix_test.cpp
libs/Math/include/: CSMathUtility.h  matrix.h  rotation_matrix.h  scale_matrix.h  translation_matrix.h  view_matrix.h
libs/Math/include/Math/: CSMathUtility.h  Quaternion.h  clip.h  clip_plane.h  lerp.h  matrix.h  perspective_projection_matrix.h  rotation_matrix.h  rotator.h  scale_matrix.h  translation_matrix.h  vector3d.h  vector4d.h  view_matrix.h
libs/Math/src/: Quaternion.cpp  clip.cpp  clip_plane.cpp  lerp.cpp  matrix.cpp  perspective_projection_matrix.cpp  rotation_matrix.cpp  rotator.cpp  scale_matrix.cpp  translation_matrix.cpp  vector3d.cpp  vector4d.cpp  view_matrix.cpp
libs/Renderer/: CMakeLists.txt
libs/Renderer/include/Renderer/: scene_renderer.h  view_port.h
libs/Renderer/src/: scene_renderer.cpp  view_port.cpp
libs/SceneData/: CMakeLists.txt
libs/SceneData/Test/: MeshTest.cpp  material_manager.cpp
libs/SceneData/include/SceneData/: camera.h  game_object.h  material_manager.h  mesh.h  model.h  scene.h  transform.h
libs/SceneData/src/: camera.cpp  game_object.cpp  material_manager.cpp  mesh.cpp  scene.cpp  transform.cpp
libs/app/: CMakeLists.txt
libs/app/examples/: CMakeLists.txt  SingleCube.cpp
libs/app/examples/Axis/: Axis.cpp  Axis.h  CMakeLists.txt  main.cpp
libs/app/examples/Axis/model/: axis.mtl  axis.yaml
libs/app/examples/SingleCube/: CMakeLists.txt  main.cpp
libs/app/examples/SingleCube/model/: cube.yaml
libs/app/examples/model/: cube.mtl
